# RigelLib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  deps.cmake  format-all.sh  setup.cmake  vcpkg.json
cmake/: rigel.cmake
cmake/Modules/: FindSDL2.cmake
examples/: CMakeLists.txt  bootstrap.cpp  hello_window.cpp
include/rigel/: bootstrap.hpp
include/rigel/base/: binary_io.hpp  byte_buffer.hpp  clock.hpp  defer.hpp  file_utils.hpp  grid.hpp  image.hpp  image_loading.hpp  match.hpp  spatial_types.hpp
include/rigel/opengl/: handle.hpp  opengl.hpp  shader.hpp  utils.hpp
include/rigel/render/: opengl.hpp  shader.hpp
include/rigel/sdl_utils/: error.hpp  key_code.hpp  platform.hpp  ptr.hpp
include/rigel/ui/: fps_display.hpp  imgui_integration.hpp
src/: CMakeLists.txt  bootstrap.cpp
src/base/: array_view.cpp  array_view.hpp  byte_buffer.cpp  color.hpp  container_utils.hpp  file_utils.cpp  file_utils.hpp  image.cpp  image.hpp  image_loading.cpp  image_loading.hpp  math_utils.hpp  spatial_types.hpp  spatial_types_printing.hpp  static_vector.hpp  string_utils.cpp  string_utils.hpp  warnings.hpp
src/opengl/: opengl.cpp  shader.cpp  utils.cpp
src/render/: opengl.cpp  shader.cpp
src/sdl_utils/: error.cpp  key_code.hpp  platform.cpp  ptr.hpp
src/ui/: fps_display.cpp  imgui_integration.cpp  imgui_integration.hpp
test/: CMakeLists.txt  test_array_view.cpp  test_rectangle.cpp  test_string_utils.cpp
